<resources>
    <string name="app_name">LittleLoom</string>
    <string name="welcome_message">Welcome to LittleLoom</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_or_usrnm">Email or Username\n</string>
    <string name="pwd">Password</string>
    <string name="chk_remember">Remember Me</string>
    <string name="desc_home">"All in one solution for early childhood education "</string>
    <string name="home">Home</string>
    <string name="activities">Activities</string>
    <string name="goals_tips">Goals &amp; Tips</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Your Profile</string>
    <string name="messages">Messages</string>
    <string name="add_item">Add Item</string>
</resources>
